# Ops-MCP

./: .gitignore  CAPABILITIES.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  app.py  browser_utils.py  check_fs_config.py  fs_utils.py  github_utils.py  pyproject.toml  server.py  test_mcp_browser.py
